<resources>
    <string name="app_name">SuiviGrossesse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Ma Grossesse</string>
    <string name="menu_appointment">Mes Rendez-vous</string>
    <string name="menu_tools">Outils</string>
    <string name="menu_account">Mon Compte</string>
    <string name="menu_logout">Quitter</string>

    <string name="menu_rendez_vous">Rendez-vous</string>
    <string name="menu_history">Historique</string>

    <string name="detail_grossesse">Détail \n\n Grossesse</string>
<!--    <string name="detail_grossesse">-->
<!--    À 11 semaines, l’embryon a déjà une apparence humaine : on peut distinguer ses yeux, son nez et sa bouche.\n\n-->
<!--        Ses paupières sont fermées. Ses doigts sont maintenant séparés et ses orteils commencent à se former.\n\n-->
<!--        Il commence à bouger ses membres, mais vous ne pouvez pas encore le sentir.-->
<!--    </string>-->
</resources>